--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"email" : "nineteendo19d0@gmail.com",
 		"url" : "https://github.com/Nineteendo/"
 	},
+	"publisher": "nineteendo",
 	"funding": {
 		"type": "individual",
 		"url": "https://www.paypal.com/paypalme/nineteendo"
